# bevy-bird

./: Cargo.toml  README.md  index.html
src/: lib.rs  main.rs  obstacles.rs  player.rs  prelude.rs  ui.rs
