[package]
resolver = "2"
name = "bevy-bird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
rand = "0.8.4"
bevy_rapier3d = { version = "0.11.0", feature = ["render"] }

[profile.dev.package.bevy_rapier3d]
opt-level = 3