[package]
resolver = "2"
name = "bevy-bird"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.4"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", branch = "master" }
bevy = "0.6"

[profile.dev.package."*"]
opt-level = 3